# SWE-QA-Bench

./: .dockerignore  Dockerfile  LICENSE  README.md  clone_repos.sh  pyproject.toml  repo_commit.txt  repos.txt  requirements.txt
Benchmark/: astropy.jsonl  conan.jsonl  django.jsonl  flask.jsonl  matplotlib.jsonl  pylint.jsonl  pytest.jsonl  reflex.jsonl  requests.jsonl  scikit-learn.jsonl  sphinx.jsonl  sqlfluff.jsonl  streamlink.jsonl  sympy.jsonl  xarray.jsonl
Benchmark construction/models/: __init__.py  data_models.py
Benchmark construction/qa_generator/: generate_question.py  qa_generator.py
Benchmark construction/qa_generator/core/: generator.py
Benchmark construction/repo_parser/: parse_repo.py  repo_parser.py
Benchmark construction/score/: llm-as-a-judge.py
Experiment/Script/: code_formatting.py
Experiment/Script/Cursor-Agent_QA/: README.md  RUN_INSTRUCTIONS.md  batch_script.py  config.json  fix_fields.py
Experiment/Script/OpenHands_QA/: README.md  main.py
Experiment/Script/SWE-agent_QA/: README.md  __init__.py  agent_models.py  agent_tools.py  batch_process.py  local_env.py  main.py  problem_statement.py  qa_agent.py  requirements.txt
Experiment/Script/llm_direct/: README.md  main.py  requirements.txt
Experiment/Script/rag_function_chunk/: func_chunk_rag.py  main.py
SWE-QA-Bench/datasets/questions/: astropy.jsonl  (+13 more)
SWE-QA-Bench/issue_analyzer/: .env  get_question_from_issue.py  pull_issues.py
SWE-QA-Bench/methods/: __init__.py  code_formatting.py  data_models.py
SWE-QA-Bench/score/: .env  llm-score.py  main.py
docs/: README.md
(+50 files in other folders)
