[project]
name = "swe-qa-bench"
version = "0.1.0"
description = "SWE-QA-Bench # TODO"
requires-python = ">=3.12"

dependencies = [
    "openai==1.108.0",
    "pydantic==2.11.9",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
]

[project.optional-dependencies]
baseline = [
    "faiss-cpu==1.12.0",
    "langchain==0.3.27",
    "langchain-openai==0.3.32",
    "langgraph>=0.2.40,<0.3.0",
    "meilisearch==0.37.0",
    "rich==14.1.0",
    "voyageai==0.3.5",
]
